--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/logo.png" type="image/png">
-    <title>Contact Us</title>
+    <title>Call for Papers</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -71,7 +71,7 @@
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+							
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
@@ -80,7 +80,7 @@
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
 							</li>
-
+                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
