--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+							
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
@@ -100,7 +100,7 @@
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
 							</li>
-
+                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
@@ -129,7 +129,7 @@
                 <div class="banner_content text-center">
                     <div class="page_link">
                         <a href="index.html">Home</a>
-                        <a href="speakers.html">Register</a>
+                        <a href="register.html">Register</a>
                     </div>
                     <h2>Register</h2>
                 </div>
