--- a/schedule.html
+++ b/schedule.html
@@ -55,7 +55,6 @@
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
@@ -64,6 +63,7 @@
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
 							</li>
+							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
 							<!-- <li class="nav-item submenu dropdown">
@@ -106,8 +106,7 @@
 		<div class="container">
 			<div class="main_title">
 				<h2>Event Schedule</h2>
-				<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-					price. You may see some for as low as $.17 each.</p>
+				<p>Event briefing</p>
 			</div>
 			<div class="event_schedule_inner">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -119,10 +118,10 @@
 						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
 							aria-controls="profile" aria-selected="false">Day 02</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
 							aria-controls="contact" aria-selected="false">Day 03</a>
-					</li>
+					</li> -->
 				</ul>
 				<div class="tab-content" id="myTabContent">
 					<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -131,9 +130,9 @@
 								<img src="img/schedule-1.jpg" alt="">
 							</div>
 							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
+								<h5>TIME</h5>
+								<h4>Event</h4>
+								<p>Conducted by</p>
 							</div>
 						</div>
 						<div class="media">
@@ -141,39 +140,9 @@
 								<img src="img/schedule-1.jpg" alt="">
 							</div>
 							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
+								<h5>To be updated</h5>
+								<h4>To be updated</h4>
+								<p>To be updated</p>
 							</div>
 						</div>
 					</div>
@@ -183,9 +152,9 @@
 								<img src="img/schedule-1.jpg" alt="">
 							</div>
 							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
+								<h5>TIME</h5>
+								<h4>Event</h4>
+								<p>Conducted by</p>
 							</div>
 						</div>
 						<div class="media">
@@ -193,43 +162,13 @@
 								<img src="img/schedule-1.jpg" alt="">
 							</div>
 							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
-							</div>
-						</div>
-						<div class="media">
-							<div class="d-flex">
-								<img src="img/schedule-1.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<h5>09.00 am</h5>
-								<h4>Opening Ceremony</h4>
-								<p>Speech by: Mark weins</p>
+								<h5>To be updated</h5>
+								<h4>To be updated</h4>
+								<p>To be updated</p>
 							</div>
 						</div>
 					</div>
-					<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+					<!-- <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 						<div class="media">
 							<div class="d-flex">
 								<img src="img/schedule-1.jpg" alt="">
@@ -280,7 +219,7 @@
 								<p>Speech by: Mark weins</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
