--- a/accommodation.html
+++ b/accommodation.html
@@ -88,7 +88,7 @@
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
 							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
-							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+							
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Register</a>
@@ -97,7 +97,7 @@
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
 							</li>
-
+							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
@@ -125,7 +125,7 @@
 					<div class="banner_content text-center">
 						<div class="page_link">
 							<a href="index.html">Home</a>
-							<a href="speakers.html">Accommodation</a>
+							<a href="accommodation.html">Accommodation</a>
 						</div>
 						<h2>Accommodation</h2>
 					<!-- </div>
